# exr-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
convertDtmFromExrtoRaster/: CMakeLists.txt  main.cpp
convertDtmFromRasterToExr/: CMakeLists.txt  main.cpp
hdf5utils/: CMakeLists.txt  exr2hdf5.cpp  hdf52exr.cpp
hyperspectralutils/: CMakeLists.txt  bil2exr.cpp
listPartsAndLayers/: CMakeLists.txt  main.cpp
pryeadExrChannels/: CMakeLists.txt  pryeadexrchannels.cpp
pyreadExrChannels/: CMakeLists.txt  pyreadexrchannels.cpp
rasterLabelsToExrMaps/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  getversionfield.cpp  getversionfield.h  isexr.cpp  isexr.h
